Completed created the final draft of the automation framework.